2022-09-12T08:24:47Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3035738205
* notice: last 14d: unq all: 5 13
* notice: prev accum: outdated-unq outdated-all / unq all: 86 125 / 96 140
* notice: next accum: outdated-unq outdated-all / unq all: 86 125 / 95 138
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +4 +8 -1 -2 / 3 6
* notice: removed / changed dates: [] / [2022-08-29]

2022-09-11T08:21:33Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3031105075
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 86 125 / 95 139
* notice: next accum: outdated-unq outdated-all / unq all: 86 125 / 96 140
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-11]

2022-09-10T01:59:40Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3026347403
* notice: last 14d: unq all: 6 14
* notice: prev accum: outdated-unq outdated-all / unq all: 81 119 / 92 135
* notice: next accum: outdated-unq outdated-all / unq all: 86 125 / 95 139
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-26] / []

2022-09-09T16:26:14Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3023889543
* notice: last 14d: unq all: 6 16
* notice: prev accum: outdated-unq outdated-all / unq all: 81 119 / 95 139
* notice: next accum: outdated-unq outdated-all / unq all: 81 119 / 92 135
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -4 / +5 +6 -3 -4 / 2 2
* notice: removed / changed dates: [] / [2022-08-26]

2022-09-02T08:22:29Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2977639866
* notice: last 14d: unq all: 9 20