@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-12T08:24:47Z",
-  "count" : 6,
-  "count_minmax" : [ 4, 8 ],
-  "count_decinc" : [ -2, +8 ],
-  "uniques" : 3,
-  "uniques_minmax" : [ 3, 4 ],
-  "uniques_decinc" : [ -1, +4 ]
+  "timestamp" : "2022-09-12T16:28:54Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 8 ],
+  "count_decinc" : [ -7, +8 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 4 ],
+  "uniques_decinc" : [ -3, +4 ]
 }
