@@ -1,11 +1,11 @@
 {
-  "count": 13,
+  "count": 8,
   "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-08-29T00:00:00Z",
-      "count": 6,
-      "uniques": 3
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-08-31T00:00:00Z",
