@@ -1,3 +1,11 @@
+2022-09-12T16:28:54Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3038943188
+* notice: last 14d: unq all: 5 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 86 125 / 95 138
+* notice: next accum: outdated-unq outdated-all / unq all: 86 125 / 93 133
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -2 -5 / +4 +8 -3 -7 / 1 1
+* notice: removed / changed dates: [] / [2022-08-29]
+
 2022-09-12T08:24:47Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3035738205
 * notice: last 14d: unq all: 5 13
